--- a/.github/workflows/build_binaries.yaml
+++ b/.github/workflows/build_binaries.yaml
@@ -60,8 +60,51 @@ jobs:
   publish:
     name: 'QMK Userspace Publish'
     uses: qmk/.github/.github/workflows/qmk_userspace_publish.yml@main
-    if: always() && !cancelled()
+    if: github.ref_name == 'main'
     needs: update-tag
+
+  publish-branch:
+    name: 'Publish branch artifacts to branch-specific release'
+    runs-on: ubuntu-latest
+    needs: update-tag
+    if: github.ref_name != 'main'
+    steps:
+      - name: Download all build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+          merge-multiple: true
+
+      - name: Create or update branch release and upload UF2s
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          set -e
+          SAFE_BRANCH="${GITHUB_REF_NAME//\//-}"
+          TAG="latest-$SAFE_BRANCH"
+          TITLE="Charybdis 4x6 (${GITHUB_REF_NAME})"
+
+          echo "Ensuring release $TAG exists"
+          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
+            echo "Release exists"
+          else
+            gh release create "$TAG" \
+              --repo "$GITHUB_REPOSITORY" \
+              --title "$TITLE" \
+              --prerelease \
+              --latest=false \
+              --notes "Auto release for $GITHUB_SHA ($GITHUB_REF_NAME)" || true
+          fi
+
+          echo "Uploading UF2 assets to $TAG if any are present"
+          shopt -s nullglob
+          UF2_FILES=(artifacts/**/*.uf2 artifacts/*.uf2)
+          if [ ${#UF2_FILES[@]} -eq 0 ]; then
+            echo "No UF2 files found in artifacts/. Listing contents for debugging:";
+            ls -R artifacts || true
+          else
+            gh release upload "$TAG" "${UF2_FILES[@]}" --clobber --repo "$GITHUB_REPOSITORY"
+          fi
 
   retitle-release:
     name: 'Set release title & notes'
