--- a/.github/workflows/build_binaries.yaml
+++ b/.github/workflows/build_binaries.yaml
@@ -10,7 +10,7 @@ jobs:
     name: 'QMK Userspace Build'
     uses: qmk/.github/.github/workflows/qmk_userspace_build.yml@main
     with:
-      qmk_repo: GITNCLR/bastardkb-qmk
+      qmk_repo: NoahCLR/bastardkb-qmk
       qmk_ref: bkb-master
 
   reset-release:
