Fix container image tag in GitHub Actions workflow

--- a/.github/workflows/qmk_userspace_build.yml
+++ b/.github/workflows/qmk_userspace_build.yml
@@ -26,7 +26,7 @@ jobs:
   build:
     name: Build Userspace Firmware
     runs-on: ubuntu-latest
-    container: ghcr.io/noahclr/qmk_cli::latest
+    container: ghcr.io/noahclr/qmk_cli:latest
 
     steps:
       - name: Checkout Userspace
